# Bionic-Hand-STM32

./: .cproject  .gitignore  .project  STM32H750XBHX_FLASH.ld  build_test.sh  compile_commands.json  feetech_servo_h750 Debug.launch  feetech_servo_h750 Debug（1）.launch  feetech_servo_h750.cfg  feetech_servo_h750.launch
Core/Inc/: gpio.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  usart.h
Core/Src/: freertos_heap.c  gpio.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  system_stm32h7xx.c  usart.c
Debug/: feetech_servo_h750.map  makefile  objects.list  sources.mk
Debug/FreeRtos/: event_groups.cyclo  event_groups.su  queue.cyclo  queue.d  stream_buffer.cyclo  stream_buffer.d  subdir.mk  tasks.cyclo  tasks.d  tasks.su  timers.cyclo  timers.su
Debug/SCSLib/: HLS.su  SCS.cyclo  SCS.d  SCS.su  SCSCL.cyclo  (+7 more)
FreeRtos/: tasks.c
Release/: feetech_servo_h750.elf  feetech_servo_h750.map  makefile  objects.list  sources.mk
SCSLib/: SCSCL.c
lvgl_ui_simulator/: Makefile  README.md  lvgl_ui_sim
my_core/: EMG.c  EMG.h  calib_session_log.md  calib_tasks.c  calib_tasks.h  dht11.c  dht11.h
my_drivers/: lv_conf.h
qt_app/: CMakeLists.txt  qml.qrc
qt_app/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
qt_app/BionicHandHost_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
qt_app/BionicHandHost_autogen/EWIEGA46WW/: qrc_qml.cpp
qt_app/BionicHandHost_autogen/UVLADIE3JM/: moc_HandController.cpp  moc_HandController.cpp.d
qt_app/qml/: FreeControl.qml  RehabMonitor.qml  SerialControl.qml  main.qml
qt_app/src/: HandController.cpp  HandController.h  main.cpp
(+1419 files in other folders)
